--- a/src/merging_data_sets.ipynb
+++ b/src/merging_data_sets.ipynb
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1592,13 +1592,15 @@
        "20            -                   "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Estée Lauder brands\n",
+    "# A better way to get these, is from the Demand data (get brand_abbrev then manually add elc_brand).\n",
+    "# OR \n",
     "elc_brands = pd.read_csv('../data/clean_data/elc_brands.csv', encoding = \"ISO-8859-1\")\n",
     "elc_brands"
    ]
@@ -16734,17 +16736,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>elc_brand</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>sub_category</th>\n",
+       "      <th>date</th>\n",
+       "      <th>rating_1</th>\n",
+       "      <th>rating_2</th>\n",
+       "      <th>rating_3</th>\n",
+       "      <th>rating_4</th>\n",
+       "      <th>rating_5</th>\n",
+       "      <th>sentiment_negative</th>\n",
+       "      <th>sentiment_neutral</th>\n",
+       "      <th>sentiment_positive</th>\n",
+       "      <th>demand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aveda</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>All Exfoliators</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aveda</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>All Exfoliators</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aveda</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>All Exfoliators</td>\n",
+       "      <td>2018-05-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>28376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aveda</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>All Exfoliators</td>\n",
+       "      <td>2018-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aveda</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>All Exfoliators</td>\n",
+       "      <td>2018-08-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>19970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>Tom Ford Beauty</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>All Palettes</td>\n",
+       "      <td>2019-08-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>Tom Ford Beauty</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>Makeup Primers</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>Tom Ford Beauty</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>Makeup Primers</td>\n",
+       "      <td>2019-04-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>Tom Ford Beauty</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>Makeup Primers</td>\n",
+       "      <td>2019-05-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744</th>\n",
+       "      <td>Tom Ford Beauty</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>Makeup Primers</td>\n",
+       "      <td>2019-06-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>745 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           elc_brand brand     sub_category       date  rating_1  rating_2  \\\n",
+       "0              Aveda    AV  All Exfoliators 2018-02-01        11         0   \n",
+       "1              Aveda    AV  All Exfoliators 2018-04-01         0         0   \n",
+       "2              Aveda    AV  All Exfoliators 2018-05-01         0         0   \n",
+       "3              Aveda    AV  All Exfoliators 2018-07-01         0         0   \n",
+       "4              Aveda    AV  All Exfoliators 2018-08-01         0         0   \n",
+       "..               ...   ...              ...        ...       ...       ...   \n",
+       "740  Tom Ford Beauty    TF     All Palettes 2019-08-01         0         0   \n",
+       "741  Tom Ford Beauty    TF   Makeup Primers 2019-03-01         0         0   \n",
+       "742  Tom Ford Beauty    TF   Makeup Primers 2019-04-01         0         0   \n",
+       "743  Tom Ford Beauty    TF   Makeup Primers 2019-05-01         0         4   \n",
+       "744  Tom Ford Beauty    TF   Makeup Primers 2019-06-01         0         0   \n",
+       "\n",
+       "     rating_3  rating_4  rating_5  sentiment_negative  sentiment_neutral  \\\n",
+       "0           0         0         0                   1                  1   \n",
+       "1           0         0        17                   1                  1   \n",
+       "2           0         5         0                   0                  0   \n",
+       "3           0         2         5                   0                  2   \n",
+       "4           0         0        14                   2                  0   \n",
+       "..        ...       ...       ...                 ...                ...   \n",
+       "740        16         0        46                   7                  1   \n",
+       "741         0         0        18                   1                  2   \n",
+       "742        16         9        20                   1                  5   \n",
+       "743         0         0         7                   1                  1   \n",
+       "744         0         0         4                   0                  0   \n",
+       "\n",
+       "     sentiment_positive  demand  \n",
+       "0                     9   12752  \n",
+       "1                    15   15947  \n",
+       "2                     5   28376  \n",
+       "3                     5   16646  \n",
+       "4                    12   19970  \n",
+       "..                  ...     ...  \n",
+       "740                  54       0  \n",
+       "741                  15       0  \n",
+       "742                  39       0  \n",
+       "743                   9       0  \n",
+       "744                   4       0  \n",
+       "\n",
+       "[745 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Ordering columns and rows\n",
-    "rating_demand = rating_demand.set_index(['elc_brand', 'brand', 'sub_category','date']).reset_index()"
+    "rating_demand = rating_demand.set_index(['elc_brand', 'brand', 'sub_category','date']).reset_index()\n",
+    "rating_demand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
