--- a/src/rating_and_reviews_wrangling .ipynb
+++ b/src/rating_and_reviews_wrangling .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Wrangling Rating and Reviews"
+    "# Rating and Reviews Data Wrangling"
    ]
   },
   {
@@ -1600,7 +1600,7 @@
    "source": [
     "# Estée Lauder brands\n",
     "# A better way to get these, is from the Demand data (get brand_abbrev then manually add elc_brand).\n",
-    "# OR \n",
+    "# OR ask Anurag to update the full list (I feel like some brands are missing...)\n",
     "elc_brands = pd.read_csv('../data/clean_data/elc_brands.csv', encoding = \"ISO-8859-1\")\n",
     "elc_brands"
    ]
