--- a/src/break_files_to_export.ipynb
+++ b/src/break_files_to_export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +296,84 @@
     "                    batch.to_csv(os.path.join(file_dir, filename), index=False)\n",
     "                else:\n",
     "                    batch.to_csv(os.path.join(file_dir, filename.replace('.csv','_'+str(i+1)+'.csv')), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                                           | 0/19 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosmetics_Reviews_20190630.csv\n",
+      "Columns to drop :  [\"Values in 'ELC Solution Type'\", 'Finish']\n",
+      "Columns to add :  ['ImportID', 'FileSourceID', 'Skin_Condition', 'Packaging', 'Skin_Type', 'Treatment_Area', 'Use_Case', 'Best_For', 'Verified_Buyer', '_From', 'Recommended', 'Verified_Reviewer', 'Eye_Color', 'Hair_Color', 'Skin_Tone', 'Gender', 'I_shop_at_macys_com', 'Make_up_Style', 'Purchase_Location', 'Cons', 'Pros', 'Describe_Yourself', 'Reviewer_Skin_Type', 'Age', 'Source_File_Loaded', 'Load_Date']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  5%|████▏                                                                           | 1/19 [03:34<1:04:12, 214.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosmetics_Reviews_20190831.csv\n",
+      "Columns to drop :  [\"Values in 'ELC Solution Type'\", 'Finish']\n",
+      "Columns to add :  ['ImportID', 'FileSourceID', 'Skin_Condition', 'Packaging', 'Skin_Type', 'Treatment_Area', 'Use_Case', 'Best_For', 'Verified_Buyer', '_From', 'Recommended', 'Verified_Reviewer', 'Eye_Color', 'Hair_Color', 'Skin_Tone', 'Gender', 'I_shop_at_macys_com', 'Make_up_Style', 'Purchase_Location', 'Cons', 'Pros', 'Describe_Yourself', 'Reviewer_Skin_Type', 'Age', 'Source_File_Loaded', 'Load_Date']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 11%|████████▋                                                                         | 2/19 [03:48<43:40, 154.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosmetics_Reviews_20190930.csv\n",
+      "Columns to drop :  [\"Values in 'ELC Solution Type'\", 'Finish']\n",
+      "Columns to add :  ['ImportID', 'FileSourceID', 'Skin_Condition', 'Packaging', 'Skin_Type', 'Treatment_Area', 'Use_Case', 'Reviewer_Skin_Type', 'Age', 'Source_File_Loaded', 'Load_Date']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 16%|████████████▉                                                                     | 3/19 [09:58<58:20, 218.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosmetics_Reviews_20191031.csv\n",
+      "Columns to drop :  [\"Values in 'ELC Solution Type'\", 'Finish']\n",
+      "Columns to add :  ['ImportID', 'FileSourceID', 'Skin_Condition', 'Packaging', 'Skin_Type', 'Treatment_Area', 'Use_Case', 'Reviewer_Skin_Type', 'Age', 'Source_File_Loaded', 'Load_Date']\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_data(PATH_TO_RATINGS, rows_per_batch=NB_ROWS_PER_BATCH)"
    ]
   },
   {
@@ -569,19 +647,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_data(PATH_TO_RATINGS, rows_per_batch=NB_ROWS_PER_BATCH)"
+    "Cosmetics_Reviews_20191031"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = pd.read_csv('../data/raw_data/Product Catalogue/Cosmetics_Product_20190831.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product_ID\n",
+      "24\n",
+      "Source Product Identifier\n",
+      "12\n",
+      "Product\n",
+      "245\n",
+      "Description\n",
+      "13569.0\n",
+      "Channel\n",
+      "13\n",
+      "Brand\n",
+      "89\n",
+      "Feature\n",
+      "257\n",
+      "Benefit\n",
+      "330\n",
+      "Ingredient\n",
+      "102\n",
+      "Additional Ingredients (no rulebase)\n",
+      "212\n",
+      "Product Form\n",
+      "42\n",
+      "ELC Solution Type\n",
+      "308\n",
+      "Finish\n",
+      "91\n",
+      "Looks\n",
+      "29\n",
+      "Other\n",
+      "83\n",
+      "Trends\n",
+      "74\n",
+      "Rating\n",
+      "<class 'AttributeError'>\n",
+      "Number of Reviews\n",
+      "<class 'AttributeError'>\n",
+      "Geography\n",
+      "3\n",
+      "Collection Date\n",
+      "10\n",
+      "Normalized Product Title\n",
+      "111.0\n",
+      "ProductCluster_ID\n",
+      "<class 'AttributeError'>\n",
+      "Cluster Size\n",
+      "<class 'AttributeError'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in f.columns:\n",
+    "    try:\n",
+    "        print(col)\n",
+    "        print(f[col].astype('object').str.len().max())\n",
+    "    except AttributeError:\n",
+    "        print(AttributeError)"
+   ]
   },
   {
    "cell_type": "code",
