--- a/topic_modelling/Untitled.ipynb
+++ b/topic_modelling/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,8 @@
     "\n",
     "import pyLDAvis.gensim\n",
     "import pickle \n",
-    "import pyLDAvis"
+    "import pyLDAvis\n",
+    "import pickle"
    ]
   },
   {
@@ -70,6 +71,15 @@
    ],
    "source": [
     "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = pickle.load(open(\"docs.pickle\", \"rb\"))"
    ]
   },
   {
