--- a/topic_modelling/consumer_care_topic_modelling.ipynb
+++ b/topic_modelling/consumer_care_topic_modelling.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\cfowle\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 0 == 1:\n",
     "    import nltk\n",
@@ -812,6 +802,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
